--- a/Public_Master_SafariOnline_Day1_Part1.ipynb
+++ b/Public_Master_SafariOnline_Day1_Part1.ipynb
@@ -7,6 +7,8 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [
+        "Lgxm56T_u38j",
+        "0kmgxW7Sxa6j",
         "kn-P-e_hjvK5",
         "10NtU6hV4nT6",
         "fdm3kA-Fo4pI",
@@ -269,6 +271,437 @@
             "tags": []
           },
           "execution_count": 2
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "3jX9349SpLbr",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#### Magic Commands"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Zf35CYV9PrjS",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### %timeit"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "tMpMJH0rfAEg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "too_many_decimals = 1.912345897\n",
+        "\n",
+        "print(\"built in Python Round\")\n",
+        "%timeit round(too_many_decimals, 2)\n",
+        "\n",
+        "print(\"numpy round\")\n",
+        "%timeit np.round(too_many_decimals, 2)\n",
+        "\n",
+        "print(\"Pandas DataFrame round\")\n",
+        "%timeit df.round(2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "p_KLutZKq5yN",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### %alias"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "jyIZLH6UpMou",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "alias lscsv ls -l sample_data/*.csv "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "BNJ6bKtGpVn3",
+        "colab_type": "code",
+        "outputId": "148d9bf2-cb84-4679-92d9-f989db93576b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "lscsv"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-rw-r--r-- 1 root root   301141 Feb  6 17:31 sample_data/california_housing_test.csv\n",
+            "-rw-r--r-- 1 root root  1706430 Feb  6 17:31 sample_data/california_housing_train.csv\n",
+            "-rw-r--r-- 1 root root 18289443 Feb  6 17:31 sample_data/mnist_test.csv\n",
+            "-rw-r--r-- 1 root root 36523880 Feb  6 17:31 sample_data/mnist_train_small.csv\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "AE1cfp41rcwL",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "[Reference These]\n",
+        "https://ipython.readthedocs.io/en/stable/interactive/magics.html"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "MnsQIiDurIPp",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### %who"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ljy17rdjrWD9",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Print variables"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ACyoq3IsrNZV",
+        "colab_type": "code",
+        "outputId": "c173c805-b5df-4d7d-f7eb-d92dcd8e684f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "who"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "alt\t data\t os\t stocks\t \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "MURtyzAMrZ1Z",
+        "colab_type": "code",
+        "outputId": "e0dcee57-5b74-4af6-81fc-9f9b62f56685",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "stocks.head()"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>symbol</th>\n",
+              "      <th>date</th>\n",
+              "      <th>price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>MSFT</td>\n",
+              "      <td>2000-01-01</td>\n",
+              "      <td>39.81</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>MSFT</td>\n",
+              "      <td>2000-02-01</td>\n",
+              "      <td>36.35</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>MSFT</td>\n",
+              "      <td>2000-03-01</td>\n",
+              "      <td>43.22</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>MSFT</td>\n",
+              "      <td>2000-04-01</td>\n",
+              "      <td>28.37</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>MSFT</td>\n",
+              "      <td>2000-05-01</td>\n",
+              "      <td>25.45</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  symbol       date  price\n",
+              "0   MSFT 2000-01-01  39.81\n",
+              "1   MSFT 2000-02-01  36.35\n",
+              "2   MSFT 2000-03-01  43.22\n",
+              "3   MSFT 2000-04-01  28.37\n",
+              "4   MSFT 2000-05-01  25.45"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "l9z-cAQow-BO",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### %writefile"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "luIP2qKqxJmB",
+        "colab_type": "code",
+        "outputId": "aa7be0b8-12dd-4a49-adaa-38cd5a9e4854",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "%%writefile magic_stuff.txt\n",
+        "import pandas as pd\n",
+        "df = pd.read_csv(\n",
+        "    \"https://raw.githubusercontent.com/noahgift/food/master/data/features.en.openfoodfacts.org.products.csv\")\n",
+        "df.drop([\"Unnamed: 0\", \"exceeded\", \"g_sum\", \"energy_100g\"], axis=1, inplace=True) #drop two rows we don't need\n",
+        "df = df.drop(df.index[[1,11877]]) #drop outlier\n",
+        "df.rename(index=str, columns={\"reconstructed_energy\": \"energy_100g\"}, inplace=True)\n",
+        "df.head()"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing magic_stuff.txt\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "uok6ppvvxRo9",
+        "colab_type": "code",
+        "outputId": "fa4f7af5-1bcf-4cf2-ce91-a3a7365e3b46",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "cat magic_stuff.txt"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "import pandas as pd\n",
+            "df = pd.read_csv(\n",
+            "    \"https://raw.githubusercontent.com/noahgift/food/master/data/features.en.openfoodfacts.org.products.csv\")\n",
+            "df.drop([\"Unnamed: 0\", \"exceeded\", \"g_sum\", \"energy_100g\"], axis=1, inplace=True) #drop two rows we don't need\n",
+            "df = df.drop(df.index[[1,11877]]) #drop outlier\n",
+            "df.rename(index=str, columns={\"reconstructed_energy\": \"energy_100g\"}, inplace=True)\n",
+            "df.head()"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "TtVDMB8EwJqG",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### Bash"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YC03T7XUuF1k",
+        "colab_type": "code",
+        "outputId": "bb16c476-f9bc-4a40-99e2-a6ce4e76e775",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "%%bash\n",
+        "uname -a"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Linux f88d2e69704c 4.14.79+ #1 SMP Wed Dec 19 21:19:13 PST 2018 x86_64 x86_64 x86_64 GNU/Linux\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ohA_HAOewNMT",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### Python2"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "eioZW4txwO7-",
+        "colab_type": "code",
+        "outputId": "56357e2c-ca56-4e55-eedf-f61f10548453",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "%%python2\n",
+        "print \"old school\"\n"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "old school\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "A2sW1aQ-wuPH",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### HTML"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "C8ueccG-wv8Z",
+        "colab_type": "code",
+        "outputId": "ddf177b4-d417-487f-d1ba-6227aefb09f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 74
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "%%html\n",
+        "<h1>Only The Best Tags</h>"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<h1>Only The Best Tags</h>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
