--- a/Public_SafariOnline_Day2_Part2.ipynb
+++ b/Public_SafariOnline_Day2_Part2.ipynb
@@ -16,11 +16,10 @@
         "bDlM65z5nM0i",
         "UbbRv8cOnSHm",
         "f7PiVW0InZ2T",
-        "iIZyMs6G9Sis",
         "3_LEwD9ykIuL",
         "z8HUZUfw_N38",
         "dGiZckQrC94p",
-        "cedyx3sJ-hg-",
+        "ytpzW7MsnMWx",
         "ZjxMqoubqtRv"
       ],
       "include_colab_link": true
@@ -170,17 +169,9 @@
       "source": [
         "* [Watch AWS Certified Machine Learning-Specialilty Video](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597/)\n",
         "\n",
+        "![AWS Machine Learning Videos](https://user-images.githubusercontent.com/58792/53819145-3018a100-3f1e-11e9-8e7f-30641d95ea9a.png)\n",
+        "\n",
         "![ml certification path](https://d1.awsstatic.com/training-and-certification/Learning_Paths/ml-path_exam-prep_light.0d48656f11f8440d5c981b03a07f86cda2814058.png)"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "MpHgWjpoiqPB",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        ""
       ]
     },
     {
@@ -1158,6 +1149,34 @@
     },
     {
       "metadata": {
+        "id": "ytpzW7MsnMWx",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Watching Amazon Machine Learning Case Studies (Bonus Material #5)"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "s6uKE7BBndHy",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Go through the five case studies from the [AWS Certified Machine Learning-Speciality Video](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597)\n",
+        "\n",
+        "![AWS Machine Learning Videos](https://user-images.githubusercontent.com/58792/53819145-3018a100-3f1e-11e9-8e7f-30641d95ea9a.png)\n",
+        "\n",
+        "*   [Sagemaker Features](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597/9780135556597-ACML_01_07_01)\n",
+        "*   [DeepLense Features](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597/9780135556597-ACML_01_07_02)\n",
+        "*   [Kinesis Features](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597/9780135556597-ACML_01_07_03)\n",
+        "*   [AWS Flavored Python](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597/9780135556597-ACML_01_07_04)\n",
+        "*   [Cloud9](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597/9780135556597-ACML_01_07_05)\n"
+      ]
+    },
+    {
+      "metadata": {
         "id": "K7MeMJ0fEJn7",
         "colab_type": "text"
       },
@@ -1175,13 +1194,12 @@
       "source": [
         "If you enjoyed this lesson,  please support me by:\n",
         "\n",
-        "*   Watching a leaving a review for [Essential Machine Learning and AI with Python and Jupyter Notebook](https://www.safaribooksonline.com/library/view/essential-machine-learning/9780135261118/)\n",
+        "*   Watching and leaving a review for [Essential Machine Learning and AI with Python and Jupyter Notebook](https://www.safaribooksonline.com/library/view/essential-machine-learning/9780135261118/)\n",
+        "*   Watching and leaving a review for [AWS Certified Machine Learning-Speciality (ML-S)](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597)\n",
         "*   Reading and leaving a review for [https://www.safaribooksonline.com/library/view/pragmatic-ai-an/9780134863924/](Pragmatic AI: An Introduction to Cloud-Based Machine Learning, First Edition)\n",
-        "*   Viewing  and leaving a review for [Learning Path: Essential Machine Learning and Pragmatic AI](Learning Path: Essential Machine Learning and Pragmatic AI,)\n",
-        "*   Buying a copy of [Pragmatic AI Book ](https://www.amazon.com/Pragmatic-AI-Introduction-Cloud-Based-Learning/dp/0134863860)and leaving a review on Amazon.\n",
-        "\n",
+        "*   Viewing  and leaving a review for [Learning Path: Essential Machine Learning and Pragmatic AI](https://learning.oreilly.com/learning-paths/learning-path-essential/9780135747193/)\n",
+        "*   Buying a copy of [Pragmatic AI Book ](https://www.amazon.com/Pragmatic-AI-Introduction-Cloud-Based-Learning/dp/0134863860) and leaving a review on Amazon.\n",
         "* In return, I will continously make these lessons better and make many more new lessons (have a ton of new projects going live this year.)\n",
-        "\n",
         "* Support is the lifeblood of authors to keep burning the midnight oil.\n",
         "\n",
         "\n",
