--- a/Public_SafariOnline_Day2_Part2.ipynb
+++ b/Public_SafariOnline_Day2_Part2.ipynb
@@ -23,6 +23,10 @@
         "ZjxMqoubqtRv"
       ],
       "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python2",
+      "display_name": "Python 2"
     }
   },
   "cells": [
